<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignandregistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_goneMarginTop="300dp"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/share_your_story_nwith_us"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/blog"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_emailAddress"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/login_pasword"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:textColorHint="#121212"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_emailAddress"
        app:layout_constraintStart_toStartOf="@+id/login_emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/login_emailAddress" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/login"

        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_pasword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_pasword"
        app:layout_constraintTop_toBottomOf="@+id/login_pasword"
        app:layout_goneMarginTop="300dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"

        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/register_newhere"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/register_newhere"
        app:layout_constraintTop_toBottomOf="@+id/register_newhere"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/register_user_image"
            android:layout_width="wrap_content"
            android:src="@drawable/logo"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="Enter your name"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_email1"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_password1"
        android:inputType="numberPassword"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <TextView
        android:id="@+id/register_newhere"
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/new_here"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>