<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="9dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:padding="12dp">

        <!-- Blog Heading -->
        <TextView
            android:id="@+id/heading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="2"
            android:text="@string/please_start_writing_git_commits"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/username2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Profile Image -->

        <!-- Username -->
        <TextView
            android:id="@+id/username2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_blogger"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Date -->
        <TextView
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_mediumitalic"
            android:text="@string/aug_23_2025"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@id/username2"
            app:layout_constraintTop_toBottomOf="@id/username2" />

        <!-- Divider -->
        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/heading2"
            app:layout_constraintTop_toBottomOf="@id/date2" />

        <!-- Blog Content -->
        <TextView
            android:id="@+id/post2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_light"
            android:lineHeight="20sp"
            android:maxLines="4"
            android:text="@string/item0"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/divider2"
            app:layout_constraintStart_toStartOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <!-- Read More Button -->
        <Button
            android:id="@+id/readmore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/read_more"
            app:cornerRadius="9dp"
            app:layout_constraintEnd_toStartOf="@+id/edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post2" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:text="Edit"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/readmore2"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/readmore2"
            app:layout_constraintTop_toTopOf="@+id/readmore2" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/red"
            android:text="delete"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit"
            app:layout_constraintTop_toTopOf="@+id/edit" />

        <!-- Like Count -->

        <!-- Like Button -->


        <!-- Save Button -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
